--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "employee_tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/ajhuff7/employee_tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "inquire": "^0.4.8",
     "inquirer": "^7.3.3",
     "mysql": "^2.18.1"
   }
